--- a/nix/app/.air.toml
+++ b/nix/app/.air.toml
@@ -13,7 +13,7 @@ tmp_dir = "tmp"
   exclude_regex = ["_test.go", "_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
-  full_bin = ""
+  full_bin = "HOST=localhost PORT=8080 ./tmp/main"
   include_dir = []
   # Watch for CSS files too
   include_ext = ["go", "tpl", "tmpl", "html", "templ", "css"]
