--- a/nix/app/config/server.yaml
+++ b/nix/app/config/server.yaml
@@ -68,8 +68,8 @@ roles:
         2: {leader: 1, assassin: 1}
         3: {leader: 1, assassin: 2}
         4: {leader: 1, assassin: 3}  # No traitor, pure assassination
-        5: {leader: 1, guardian: 1, assassin: 2, traitor: 1}  # Same as standard
-        6: {leader: 1, assassin: 4, traitor: 1}  # No guardian, +1 assassin
+        5: {leader: 1, guardian: 0, assassin: 3, traitor: 1}
+        6: {leader: 1, guardian: 0, assassin: 3, traitor: 2}  # No guardian, +1 assassin
         7: {leader: 1, guardian: 2, assassin: 3, traitor: 1}  # Same as standard
         8: {leader: 1, guardian: 2, assassin: 4, traitor: 1}  # +1 assassin, -1 traitor
         9: {leader: 1, guardian: 2, assassin: 5, traitor: 2}
