--- a/nix/app/config/server.yaml
+++ b/nix/app/config/server.yaml
@@ -39,67 +39,74 @@ roles:
       distributions:
         1: {leader: 1}
         2: {leader: 1, traitor: 1}
-        3: {leader: 1, guardian: 1, traitor: 1}
-        4: {leader: 1, guardian: 2, traitor: 1}
-        5: {leader: 1, guardian: 2, assassin: 1, traitor: 1}
-        6: {leader: 1, guardian: 2, assassin: 2, traitor: 1}
-        7: {leader: 1, guardian: 3, assassin: 2, traitor: 1}
-        8: {leader: 1, guardian: 3, assassin: 2, traitor: 2}
-        9: {leader: 1, guardian: 4, assassin: 3, traitor: 1}
-        10: {leader: 1, guardian: 4, assassin: 3, traitor: 2}
-        11: {leader: 1, guardian: 5, assassin: 3, traitor: 2}
-        12: {leader: 1, guardian: 5, assassin: 4, traitor: 2}
-        13: {leader: 1, guardian: 6, assassin: 4, traitor: 2}
-        14: {leader: 1, guardian: 6, assassin: 5, traitor: 2}
-        15: {leader: 1, guardian: 7, assassin: 5, traitor: 2}
-        16: {leader: 1, guardian: 7, assassin: 6, traitor: 2}
-        17: {leader: 1, guardian: 8, assassin: 6, traitor: 2}
-        18: {leader: 1, guardian: 8, assassin: 7, traitor: 2}
-        19: {leader: 1, guardian: 9, assassin: 7, traitor: 2}
-        20: {leader: 1, guardian: 9, assassin: 8, traitor: 2}
+        3: {leader: 1, assassin: 1, traitor: 1}
+        4: {leader: 1, assassin: 2, traitor: 1}
+        5: {leader: 1, guardian: 1, assassin: 2, traitor: 1}
+        6: {leader: 1, guardian: 1, assassin: 3, traitor: 1}
+        7: {leader: 1, guardian: 2, assassin: 3, traitor: 1}
+        8: {leader: 1, guardian: 2, assassin: 3, traitor: 2}
+        # Balanced for two-phase gameplay
+        9: {leader: 1, guardian: 3, assassin: 4, traitor: 2}
+        10: {leader: 1, guardian: 3, assassin: 4, traitor: 3}
+        11: {leader: 1, guardian: 4, assassin: 4, traitor: 3}
+        12: {leader: 1, guardian: 4, assassin: 5, traitor: 3}
+        13: {leader: 1, guardian: 5, assassin: 5, traitor: 3}
+        14: {leader: 1, guardian: 5, assassin: 5, traitor: 4}
+        15: {leader: 1, guardian: 6, assassin: 5, traitor: 4}
+        16: {leader: 1, guardian: 6, assassin: 6, traitor: 4}
+        17: {leader: 1, guardian: 7, assassin: 6, traitor: 4}
+        18: {leader: 1, guardian: 7, assassin: 6, traitor: 5}
+        19: {leader: 1, guardian: 8, assassin: 6, traitor: 5}
+        20: {leader: 1, guardian: 8, assassin: 6, traitor: 6}
     
     assassination:
       name: "Assassination Heavy"
       description: "More assassins for a chaotic game"
       distributions:
-        3: {leader: 1, assassin: 1, traitor: 1}
-        4: {leader: 1, guardian: 1, assassin: 1, traitor: 1}
-        5: {leader: 1, guardian: 1, assassin: 2, traitor: 1}
-        6: {leader: 1, guardian: 1, assassin: 3, traitor: 1}
-        7: {leader: 1, guardian: 2, assassin: 3, traitor: 1}
-        8: {leader: 1, guardian: 2, assassin: 4, traitor: 1}
-        9: {leader: 1, guardian: 2, assassin: 5, traitor: 1}
-        10: {leader: 1, guardian: 3, assassin: 5, traitor: 1}
-        11: {leader: 1, guardian: 3, assassin: 6, traitor: 1}
-        12: {leader: 1, guardian: 3, assassin: 7, traitor: 1}
-        13: {leader: 1, guardian: 4, assassin: 7, traitor: 1}
-        14: {leader: 1, guardian: 4, assassin: 8, traitor: 1}
-        15: {leader: 1, guardian: 4, assassin: 9, traitor: 1}
-        16: {leader: 1, guardian: 5, assassin: 9, traitor: 1}
-        17: {leader: 1, guardian: 5, assassin: 10, traitor: 1}
-        18: {leader: 1, guardian: 5, assassin: 10, traitor: 2}
-        19: {leader: 1, guardian: 6, assassin: 10, traitor: 2}
-        20: {leader: 1, guardian: 6, assassin: 10, traitor: 3}
-    
+        # More assassins, harder Phase 1
+        1: {leader: 1}
+        2: {leader: 1, assassin: 1}
+        3: {leader: 1, assassin: 2}
+        4: {leader: 1, assassin: 3}  # No traitor, pure assassination
+        5: {leader: 1, guardian: 1, assassin: 2, traitor: 1}  # Same as standard
+        6: {leader: 1, assassin: 4, traitor: 1}  # No guardian, +1 assassin
+        7: {leader: 1, guardian: 2, assassin: 3, traitor: 1}  # Same as standard
+        8: {leader: 1, guardian: 2, assassin: 4, traitor: 1}  # +1 assassin, -1 traitor
+        9: {leader: 1, guardian: 2, assassin: 5, traitor: 2}
+        10: {leader: 1, guardian: 3, assassin: 5, traitor: 2}
+        11: {leader: 1, guardian: 3, assassin: 5, traitor: 3}
+        12: {leader: 1, guardian: 3, assassin: 6, traitor: 3}
+        13: {leader: 1, guardian: 4, assassin: 6, traitor: 3}
+        14: {leader: 1, guardian: 4, assassin: 6, traitor: 4}
+        15: {leader: 1, guardian: 5, assassin: 6, traitor: 4}
+        16: {leader: 1, guardian: 5, assassin: 7, traitor: 4}
+        17: {leader: 1, guardian: 6, assassin: 7, traitor: 4}
+        18: {leader: 1, guardian: 6, assassin: 7, traitor: 5}
+        19: {leader: 1, guardian: 7, assassin: 7, traitor: 5}
+        20: {leader: 1, guardian: 7, assassin: 7, traitor: 6}
+
     guardian:
       name: "Guardian Heavy"
       description: "More guardians for a defensive game"
       distributions:
-        3: {leader: 1, guardian: 2}
-        4: {leader: 1, guardian: 3}
-        5: {leader: 1, guardian: 3, traitor: 1}
-        6: {leader: 1, guardian: 4, traitor: 1}
-        7: {leader: 1, guardian: 5, traitor: 1}
-        8: {leader: 1, guardian: 5, assassin: 1, traitor: 1}
-        9: {leader: 1, guardian: 6, assassin: 1, traitor: 1}
-        10: {leader: 1, guardian: 7, assassin: 1, traitor: 1}
-        11: {leader: 1, guardian: 8, assassin: 1, traitor: 1}
-        12: {leader: 1, guardian: 8, assassin: 2, traitor: 1}
-        13: {leader: 1, guardian: 9, assassin: 2, traitor: 1}
-        14: {leader: 1, guardian: 10, assassin: 2, traitor: 1}
-        15: {leader: 1, guardian: 10, assassin: 3, traitor: 1}
-        16: {leader: 1, guardian: 10, assassin: 3, traitor: 2}
-        17: {leader: 1, guardian: 10, assassin: 4, traitor: 2}
-        18: {leader: 1, guardian: 10, assassin: 5, traitor: 2}
-        19: {leader: 1, guardian: 10, assassin: 6, traitor: 2}
-        20: {leader: 1, guardian: 10, assassin: 7, traitor: 2}
+        # More guardians, easier Phase 1, stronger Phase 2
+        1: {leader: 1}
+        2: {leader: 1, traitor: 1}  # Must have evil
+        3: {leader: 1, guardian: 1, traitor: 1}  # Guardian instead of assassin
+        4: {leader: 1, guardian: 1, assassin: 1, traitor: 1}  # -1 assassin, +1 guardian
+        5: {leader: 1, guardian: 2, assassin: 1, traitor: 1}  # +1 guardian, -1 assassin
+        6: {leader: 1, guardian: 2, assassin: 2, traitor: 1}  # +1 guardian, -1 assassin
+        7: {leader: 1, guardian: 3, assassin: 2, traitor: 1}  # +1 guardian, -1 assassin
+        8: {leader: 1, guardian: 3, assassin: 3, traitor: 1}  # +1 guardian, -1 traitor
+        9: {leader: 1, guardian: 4, assassin: 3, traitor: 2}
+        10: {leader: 1, guardian: 5, assassin: 3, traitor: 2}
+        11: {leader: 1, guardian: 5, assassin: 3, traitor: 3}
+        12: {leader: 1, guardian: 6, assassin: 3, traitor: 3}
+        13: {leader: 1, guardian: 7, assassin: 3, traitor: 3}
+        14: {leader: 1, guardian: 7, assassin: 4, traitor: 3}
+        15: {leader: 1, guardian: 8, assassin: 4, traitor: 3}
+        16: {leader: 1, guardian: 8, assassin: 4, traitor: 4}
+        17: {leader: 1, guardian: 9, assassin: 4, traitor: 4}
+        18: {leader: 1, guardian: 9, assassin: 5, traitor: 4}
+        19: {leader: 1, guardian: 10, assassin: 5, traitor: 4}
+        20: {leader: 1, guardian: 10, assassin: 5, traitor: 5}
