--- a/nix/app/.air.toml
+++ b/nix/app/.air.toml
@@ -5,7 +5,8 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main ./cmd/server"
+  # Run both templ generate and CSS build before Go build
+  cmd = "templ generate && npm run build:css && go build -o ./tmp/main ./cmd/server"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "bin", "node_modules"]
   exclude_file = []
@@ -14,7 +15,8 @@ tmp_dir = "tmp"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html", "templ"]
+  # Watch for CSS files too
+  include_ext = ["go", "tpl", "tmpl", "html", "templ", "css"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
