🔧 fix: add configurable default game size to start rooms with 5 players
Rooms were starting with 20-player configurations which was confusing for users.
Now rooms start with a reasonable 5-player default that can be configured.

- Added defaultGameSize field to server config (defaults to 5)
- Updated room creation to use defaultGameSize instead of maxPlayersPerRoom
- Room still maintains max capacity of 20 players for scaling up
- Added test to verify the new behavior works correctly

--- a/nix/app/config/server.yaml
+++ b/nix/app/config/server.yaml
@@ -2,6 +2,7 @@
 server:
   maxPlayersPerRoom: 20
   minPlayersPerRoom: 1
+  defaultGameSize: 5      # Default number of players for new rooms
   roomCodeLength: 5
   roomTimeout: 24h
 
