✨ feat: create DaisyUI theme matching Treacherest design
<what>✨ feat: create DaisyUI theme matching Treacherest design</what>
<why>First step of CSS migration - establish theme that preserves exact current colors. Users should see no visual changes initially.</why>
<how>
- Created input.css with Tailwind v4 @theme syntax
- Mapped current colors: #1a1a2e (bg), #e94560 (accent), etc.
- Added utility classes for game-specific needs (room-code-display, custom-scrollbar)
- Added output CSS files to .gitignore (build artifacts)
- Prepared compatibility classes for incremental migration
</how>
<prompt>Create DaisyUI theme configuration that exactly matches current Treacherest colors for seamless migration</prompt>
<post-prompt>Theme colors successfully match current design. Output CSS is generated artifact, not source - added to gitignore.</post-prompt>

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ nix/app/static/images/
 /agents/analysis/
 /nix/app/scripts/static/images
 node_modules/
+
+# CSS build outputs
+nix/app/static/css/output.css
+nix/app/static/css/output.min.css
