🔧 chore: set up Tailwind CSS v4 and DaisyUI v5 build pipeline
<what>🔧 chore: set up Tailwind CSS v4 and DaisyUI v5 build pipeline</what>
<why>Implementing incremental DaisyUI migration strategy. Need modern CSS pipeline to replace 473 lines of inline CSS with maintainable component system.</why>
<how>
- Updated package.json with Tailwind CSS 4.1.11 and DaisyUI 5.0.43
- Added @tailwindcss/postcss for v4 compatibility
- Created minimal tailwind.config.js with content paths only (v4 pattern)
- Set up PostCSS config with proper plugin chain
- Added CSS build scripts: build:css and watch:css
</how>
<prompt>Create CSS build pipeline using latest Tailwind v4 + DaisyUI v5 following northstar example patterns</prompt>
<post-prompt>Tailwind v4 requires @tailwindcss/postcss plugin. DaisyUI v5 needed for v4 compatibility. Config stays minimal with theme in CSS.</post-prompt>

--- a/nix/app/package.json
+++ b/nix/app/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "treacherest-tests",
+  "name": "treacherest",
   "version": "1.0.0",
-  "description": "Playwright tests for Treacherest game",
+  "description": "Treacherest game with DaisyUI",
+  "type": "module",
   "scripts": {
     "test:playwright": "playwright test",
     "test:playwright:ui": "playwright test --ui",
     "test:playwright:debug": "playwright test --debug",
-    "playwright:install": "playwright install chromium"
+    "playwright:install": "playwright install chromium",
+    "build:css": "postcss static/css/input.css -o static/css/output.css --verbose",
+    "build:css:prod": "NODE_ENV=production postcss static/css/input.css -o static/css/output.min.css",
+    "watch:css": "postcss static/css/input.css -o static/css/output.css --watch --verbose",
+    "backup:css": "cp -r internal/views internal/views.backup-$(date +%Y%m%d-%H%M%S)"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0"
-  }
+    "@playwright/test": "^1.40.0",
+    "tailwindcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
+    "daisyui": "^5.0.43",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss-import": "^16.1.0",
+    "cssnano": "^7.0.6"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
