🔧 chore: add Go binary to gitignore
<what>Add nix/app/main to gitignore</what>
<why>Prevent committing compiled Go binaries to the repository</why>
<how>
- Added nix/app/main to .gitignore
</how>
<prompt>Cleanup during role configuration implementation</prompt>
<post-prompt>Keeps build artifacts out of version control</post-prompt>

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ go.work.sum
 
 air
 server
+nix/app/main
 
 # nixago: ignore-linked-files
 /lefthook.yml
@@ -54,3 +55,4 @@ playwright/.cache/
 
 digest.txt
 nix/app/static/images/
+.gemini/
