--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+
+*.test
+
+*.out
+coverage.*
+*.coverprofile
+profile.cov
+
+vendor/
+tmp/
+
+go.work
+go.work.sum
+
+.env
+
+*.o
+*.a
+*.so
+*.test
+*.prof
+*.out
+
+.vscode
+.idea
+
+air
 
 # nixago: ignore-linked-files
 /lefthook.yml
